# test-v1

./: Cargo.toml  README.md  install_complete.sh
bots/sandwich/: .env  .gitignore  Cargo.toml  README.md  run.sh  test_connection.rs
bots/sandwich/src/: config.rs  decode.rs  lib.rs  main.rs  monitor.rs
src/: config.rs  lib.rs  main.rs  monitor.rs
