[package]
name = "sandwich-bot"
version = "0.2.0"
edition = "2021"
authors = ["Your Name"]
description = "MEV Sandwich Bot for Polygon Network"

[[bin]]
name = "sandwich-bot"
path = "src/main.rs"

[[bin]]
name = "test_connection"
path = "src/bin/test_connection.rs"

[dependencies]
# Ethereum/Web3
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Utils
hex = "0.4"

[dev-dependencies]
mockito = "1.2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
