[package]
name = "sandwich_bot"
version = "0.1.0"
edition = "2025"

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1.0"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
