[package]
name = "sandwich_bot"
version = "2.0.0"
edition = "2021"
authors = ["MEV Trader"]
description = "L2 Sandwich Bot for Polygon/Arbitrum"

[dependencies]
# Ethereum
ethers = { version = "2.0", features = ["ws", "legacy", "rustls"] }

# Async runtime
tokio = { version = "1.35", features = ["full", "signal", "macros", "rt-multi-thread"] }

# Time and logging
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
anyhow = "1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional: for better performance
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
