[package]
name = "sandwich-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum/Web3
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Utils
hex = "0.4"

[dev-dependencies]
# Pour les tests
mockito = "1.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
